Fixed register button on mobile

--- a/resources/assets/less/includes/pages/event-items.less
+++ b/resources/assets/less/includes/pages/event-items.less
@@ -396,15 +396,23 @@
 			}
 
 			@media @phone{
-			position:relative;
-			width: 100%;
-			bottom: 0px;
+				position:relative;
+				width: 100%;
+				bottom: 0px;
+				
+				a {
+					width:100%!important;
+				}
 			}
 
 			@media @tablet{
 				position:relative; 
 				width: 100%;
 				bottom: 0px;
+
+				a {
+				width:100%!important;
+				}
 			}
 
 
